# ProyectoGestionReservas

./: .gitignore  pyproject.toml
backend/: app.py  routes.py
backend/controllers/: __init__.py  auth_controller.py  cita_controller.py  estilista_controller.py  peluqueria_controller.py  servicio_controller.py
backend/instance/: cuttime.db
backend/services/: auth_service.py  cita_service.py  estilista_service.py  peluqueria_service.py  servicio_service.py
common/: __init__.py  base.py  cita.py  citaServicio.py  cliente.py  estilista.py  gerente.py  peluqueria.py  peluqueriaServicio.py  servicio.py
desktop_app/: config.py  cutTime_dashboard.py  cutTime_dashboard.ui  cutTime_dashboard_ui.py  main.py  utils.py
desktop_app/Styles/: cold.qss  dark.qss  light.qss  warm.qss
desktop_app/controller/: app_controller.py  cutTime_dashboard.py  cutTime_opciones.py  login.py
desktop_app/repo/: auth_service.py  cita_service.py  estilista_service.py
desktop_app/ui/: cutTime_dashboard.ui  cutTime_dashboard_ui.py  cutTime_logIn.ui  cutTime_logIn_ui.py  cutTime_opciones.ui  cutTime_opciones_ui.py  cutTume_registro.ui  cutTume_registro_ui.py
desktop_app/utils/: app_state.json  auth_helper.py  json_handler.py  theme_helper.py  token_manager.py
movil_app/: settings.gradle.kts
movil_app/app/: build.gradle.kts
movil_app/app/src/main/: AndroidManifest.xml
movil_app/app/src/main/res/values/: strings.xml  themes.xml
movil_app/app/src/main/res/values-night/: themes.xml
movil_app/gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
