[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "mysql-connector-python>=9.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pyside6>=6.10.1",
    "python-dotenv>=1.2.1",
]
